2011-07-26  Ira Rosen  <ira.rosen@linaro.org>

	* gcc.dg/vect/vect-70.c: Reduce the data size to fit
	SPU local store.

2011-07-25  Andrew Pinski  <apinski@cavium.com>

	PR tree-opt/49671
	* gcc.dg/tree-ssa/pr49671-1.c: New testcase.
	* gcc.dg/tree-ssa/pr49671-2.c: New testcase.
	
2011-07-25  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR testsuite/49753
	* g++.dg/torture/pr49309.C: Add -fpreprocessed to dg-options.

	Revert:
	2011-07-15  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/49753
	* g++.dg/torture/pr49309.C: Remove.

2011-07-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/49708
	* gfortran.dg/allocate_error_3.f90: New.

2011-07-22  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp (check_ifunc_available): Rewrite.

2011-07-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR debug/47393
	* g++.dg/debug/dwarf2/icf.C: XFAIL some scan-assembler on
	mips-sgi-irix*.

2011-07-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45819
	* gcc.dg/pr45819.c: New testcase.

2011-07-21  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp (check_avx_os_support_available): New.
	(check_effective_target_avx_runtime): Use it.

2011-07-19  Jason Merrill  <jason@redhat.com>

	PR c++/49785
	* g++.dg/cpp0x/variadic114.C: New.

2011-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49768
	* gcc.c-torture/execute/pr49768.c: New test.

2011-07-18  Mikael Morin  <mikael.morin@sfr.fr>

	PR fortran/49648
	* gfortran.dg/result_in_spec_4.f90: New test.

2011-07-18  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49675
	* gfortran.dg/pr49675.f90: New test.

2011-07-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pointer_controlled.adb: New test.

2011-07-15  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/49753
	* g++.dg/torture/pr49309.C: Remove.

2011-07-14  Janis Johnson  <janisjo@codesourcery.com>

	* gcc.target/arm/pr40657-2.c: Remove -march.
	* gcc.target/arm/pr42235.c: Likewise.
	* gcc.target/arm/pr42495.c: Likewise.